demos/microshift-disconnected/files/manifests/secret-http/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-http
  namespace: secret-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-http
  template:
    metadata:
      labels:
        app: secret-http
    spec:
      containers:
        - name: secret-http
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html-volume
          configMap:
            name: web-server-html
